--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://seunghyuk:qor247412@cluster0-pn10q.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://seunghyuk:xxxxxxx@cluster0-pn10q.mongodb.net/test?retryWrites=true&w=majority
 PORT=3000
